Keep image uploaded in seperate class - FileServiceImpl and keep the file path added into application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/category
 spring.datasource.username=postgres
 spring.datasource.password=3995
 
+project.image = images/
+
 spring.jpa.show-sql= true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
